--- a/css/style.css
+++ b/css/style.css
@@ -5785,7 +5785,9 @@ hr {
     margin-left: -15px;
     margin-right: -15px
 }
-
+#h1_head{
+    color: #4121f9;
+}
 .col-xs-1,
 .col-sm-1,
 .col-md-1,
