--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     margin: 0;
     padding: 0;
@@ -5788,6 +5792,19 @@ hr {
 #h1_head{
     color: #4121f9;
     font-size: 60px;
+    white-space: nowrap;
+    position: absolute;
+    left: -100%;
+    animation: slideIn 3s forwards;
+}
+
+@keyframes slideIn {
+    from {
+        left: -100%;
+    }
+    to {
+        left: 0;
+    }
 }
 .col-xs-1,
 .col-sm-1,
@@ -9124,7 +9141,6 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     }
 }
 
-@charset "utf-8";
 
 html {
     overflow: hidden
@@ -9309,15 +9325,38 @@ h1.title:before {
 }
 
 #statistics {
-    background: url(//devio.uz/wp-content/themes/devio/css/../images/statistics_bg.jpg) no-repeat center center;
-    background-size: cover;
-    padding: 100px 0
+    position: relative;
+    padding: 100px 0;
+    overflow: hidden;
 }
 
-#statistics {
-    background: url(//devio.uz/wp-content/themes/devio/css/../images/statistics_bg.jpg) no-repeat center center;
+#statistics::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) no-repeat center center;
     background-size: cover;
-    padding: 100px 0
+    filter: blur(3px); 
+    z-index: -1;
+}
+
+.white-image {
+    filter: brightness(0) invert(1);
+}
+
+
+#statistics::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.192); 
+    z-index: -1;
 }
 
 #proposal {
