--- a/css/style.css
+++ b/css/style.css
@@ -9254,7 +9254,7 @@ a:hover {
 .proposal-button {
     display: block;
     color: #000;
-    background: #ff3a5a;
+    background: #3a85ff;
     padding: 9px 31px;
     border: #ffdead;
     border-radius: 3px;
@@ -9300,17 +9300,6 @@ h2.dark+p {
     color: #6b6c6c
 }
 
-h1.title:before {
-    display: block;
-    width: 30px;
-    height: 3px;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    margin: 0 0 0 -15px;
-    background: #ff3a5a;
-    content: ''
-}
 
 #services,
 #benefits,
