--- a/css/style.css
+++ b/css/style.css
@@ -5789,7 +5789,8 @@ hr {
     margin-left: -15px;
     margin-right: -15px
 }
-#h1_head{
+
+#h1_head {
     color: #4121f9;
     font-size: 60px;
     white-space: nowrap;
@@ -5802,10 +5803,12 @@ hr {
     from {
         left: -100%;
     }
+
     to {
         left: 0;
     }
 }
+
 .col-xs-1,
 .col-sm-1,
 .col-md-1,
@@ -7358,19 +7361,31 @@ select[multiple].input-lg {
         padding-top: 6px;
         font-size: 12px
     }
-.collapse{
-    display: flex !important;
-    white-space: nowrap !important;
-}
 
-.collapse .nav {
-    display: flex;
-    white-space: nowrap !important;
-}
+    .carousel-inner {
+        height: 700px !important;
+    }
+
+    .item:nth-child(1){
+        background-image: url(https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+       background-size: cover; 
+       background-position: center;
+       height: 700px !important;
+   }
+
+    .collapse {
+        display: flex !important;
+        white-space: nowrap !important;
+    }
+
+    .collapse .nav {
+        display: flex;
+        white-space: nowrap !important;
+    }
 
     #h1_head {
         font-size: 35px;
-        
+
     }
 }
 
@@ -9354,7 +9369,7 @@ h2.dark+p {
     height: 100%;
     background: url(https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) no-repeat center center;
     background-size: cover;
-    filter: blur(3px); 
+    filter: blur(3px);
     z-index: -1;
 }
 
@@ -9370,7 +9385,7 @@ h2.dark+p {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.192); 
+    background-color: rgba(0, 0, 0, 0.192);
     z-index: -1;
 }
 
