--- a/css/style.css
+++ b/css/style.css
@@ -5792,10 +5792,10 @@ hr {
 
 #h1_head {
     color: #4121f9;
-    font-size: 60px;
+    font-size: 60px !important;
     white-space: nowrap;
     position: absolute;
-    left: -100%;
+    margin-left: 10px !important;
     animation: slideIn 3s forwards;
 }
 
