--- a/css/style.css
+++ b/css/style.css
@@ -7245,6 +7245,12 @@ select[multiple].input-lg {
     color: #737373
 }
 
+@media (min-width: 1024px) {
+#h1_head {
+    font-size: 50px !important;
+}
+}
+
 @media (min-width: 768px) {
     .form-inline .form-group {
         display: inline-block;
