--- a/css/style.css
+++ b/css/style.css
@@ -7390,7 +7390,7 @@ select[multiple].input-lg {
     }
 
     #h1_head {
-        font-size: 35px;
+        font-size: 35px !important;
 
     }
 }
@@ -7409,12 +7409,7 @@ select[multiple].input-lg {
         height: 700px !important;
     }
 
-    .item:nth-child(1){
-        background-image: url(https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-       background-size: cover; 
-       background-position: center;
-       height: 700px !important;
-   }
+
 
     .collapse {
         display: flex !important;
@@ -7443,12 +7438,7 @@ select[multiple].input-lg {
         height: 700px !important;
     }
 
-    .item:nth-child(1){
-        background-image: url(https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-       background-size: cover; 
-       background-position: center;
-       height: 1200px !important;
-   }
+
 
     .collapse {
         display: flex !important;
