--- a/css/style.css
+++ b/css/style.css
@@ -7357,7 +7357,7 @@ select[multiple].input-lg {
     }
 
     #h1_head {
-        font-size: 50px;
+        font-size: 70px !important;
         margin-left: 10%
     }
 }
@@ -7372,12 +7372,6 @@ select[multiple].input-lg {
         height: 700px !important;
     }
 
-    .item:nth-child(1){
-        background-image: url(https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-       background-size: cover; 
-       background-position: center;
-       height: 700px !important;
-   }
 
     .collapse {
         display: flex !important;
