--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,59 @@
     box-sizing: border-box;
 }
 
+#adres {
+    padding-top: 50px;
+}
+
+#adres .adr_h1 {
+    font-weight: bold;
+    font-size: 44px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+
+
+}
+
+#adres div {
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+#benefits .title,
+#benefits .col-md-6 {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+#benefits .visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.service {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.service.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.service, .title, .dark {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
 
 
 .login-box1 {
@@ -9503,14 +9556,11 @@ h2.dark+p {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'), linear-gradient(rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0.5));
-    /* добавление красного оттенка */
+    background-image: url('https://images.unsplash.com/photo-1487611459768-bd414656ea10?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     filter: blur(5px);
-    /* регулировать уровень размытия по необходимости */
-    /* mix-blend-mode: multiply;  */
 }
 
 
