--- a/css/style.css
+++ b/css/style.css
@@ -5812,6 +5812,12 @@ hr {
     padding-left: 15px;
     padding-right: 15px
 }
+@media (min-width: 1024px) {
+    .zayafka {
+        display: none;
+    }
+}
+
 
 @media (min-width: 768px) {
     .container {
