--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@
     border-radius: 10px;
 }
 
+
 .login-box1 p:first-child {
 
     color: #3d3bff;
@@ -5821,6 +5822,11 @@ hr {
     }
 }
 
+@media (max-width: 768px) {
+    #contacts {
+        display: none;
+    }
+}
 
 @media (min-width: 768px) {
     .container {
