--- a/css/style.css
+++ b/css/style.css
@@ -5860,7 +5860,7 @@ hr {
 }
 
 #h1_head {
-    color: #4121f9;
+    color: rgb(0, 50, 151);
     font-size: 60px;
     white-space: nowrap;
     position: absolute;
