--- a/css/style.css
+++ b/css/style.css
@@ -5859,6 +5859,106 @@ hr {
     margin-right: -15px
 }
 
+.modal {
+    height: 100%;
+}
+
+.modal-content .inputs {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.modal-content .p2 {
+    font-size: 17px;
+}
+
+.modal-content .btn_otpravit {
+    width: 100%;
+    margin-top: 30px;
+    padding: 12px 8px;
+    border: none;
+    border-radius: 15px;
+    background-color: #3d3bff;
+}
+
+.modal-content .btn_otpravit p {
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+
+.modal-content .inputs input {
+    padding: 15px 8px;
+    border-radius: 15px;
+    border: 0.5px solid gainsboro;
+}
+
+.modal-content {
+    /* align-content: center; */
+    text-align: center;
+    justify-content: center;
+}
+
+
+.modal-content .header {
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    white-space: nowrap;
+    gap: 30px;
+
+}
+
+
+.modal-content .header p {
+    font-weight: 800;
+    font-size: 22px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 100%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
+}
+
 #h1_head {
     color: rgb(0, 50, 151);
     font-size: 60px;
