--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,28 @@
     border-radius: 10px;
 }
 
+.pomoshnik {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+
+.pomoshnik button {
+    width: 90px;
+    height: 90px;
+    border: none;
+    background-color: #3d3bff;
+    border-radius: 100%;
+}
+
+.pomoshnik button img {
+    width: 50px;
+    height: 50px;
+    filter: invert(100%) brightness(100%);
+}
+
 
 .login-box1 p:first-child {
 
