--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,84 @@
 }
 
 
+.m div {
+    border: 1px solid ghostwhite;
+    
+    padding: 5px;
+    border-radius: 12px;
+    margin-top: 10px;
+}
+
+.m div a {
+    display: flex;
+    gap: 20px;
+}
+
+.m .p2 {
+    padding-top: 10px;
+    font-style: oblique;
+}
+
+.p .p1 {
+    font-size: 18px;
+    color: #3d3bff;
+}
+
+.pomoshnik {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pomoshnik button {
+    width: 90px;
+    height: 90px;
+    border: none;
+    background-color: #3d3bff;
+    border-radius: 100%;
+    position: relative;
+}
+
+.pomoshnik button img {
+    width: 50px;
+    height: 50px;
+    filter: invert(100%) brightness(100%);
+}
+
+.pom_mes {
+    width: 300px;
+    height: 200px;
+    display: none;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
+}
+
+.pom_mes .p {
+    display: flex;
+    white-space: nowrap;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pom_mes .p img {
+    cursor: pointer;
+    width: 20px;
+}
+
+
 .pomoshnik button {
     width: 90px;
     height: 90px;
@@ -7617,6 +7695,18 @@ hr {
     .form-horizontal .form-group-sm .control-label {
         padding-top: 6px;
         font-size: 12px
+    }
+
+
+    #toggleButton {
+        width: 50px;
+        height: 50px;
+        bottom: 100px;
+    }
+
+    #toggleButton img {
+        width: 20px;
+        height: 20px;
     }
 
     .carousel-inner {
