--- a/css/style.css
+++ b/css/style.css
@@ -7740,6 +7740,17 @@ hr {
         font-size: 12px
     }
 
+    #toggleButton {
+        width: 50px;
+        height: 50px;
+        bottom: 100px;
+    }
+
+    #toggleButton img {
+        width: 20px;
+        height: 20px;
+    }
+
     .carousel-inner {
         height: 700px !important;
     }
@@ -7767,6 +7778,17 @@ hr {
     .form-horizontal .form-group-sm .control-label {
         padding-top: 6px;
         font-size: 12px;
+    }
+
+    #toggleButton {
+        width: 50px;
+        height: 50px;
+        bottom: 100px;
+    }
+
+    #toggleButton img {
+        width: 20px;
+        height: 20px;
     }
 
     .carousel-inner {
