--- a/SAM_SOFT_LINE/css/style.css
+++ b/SAM_SOFT_LINE/css/style.css
@@ -8,6 +8,48 @@
     box-sizing: border-box;
 }
 
+.navbar-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+.head_img {
+    height: auto;
+    width: 100px;
+    max-height: 60px; 
+    margin-right: 20px;
+}
+
+.logo_div {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+
+.logo_div img {
+  padding-left:8px;
+    background-color: #fff;
+    margin-left: 20px;
+    border-radius: 50%;
+    width: 100px;
+}
+
+
+
+.head_img2 {
+    height: auto;
+    height: 40px;
+    width: 60px;
+
+}
+.nav-item a:hover {
+    color: #007bff;
+}
+
+
 .headerH2 {
     color: #000;
     font-size: 40px;
@@ -57,7 +99,9 @@
     transform: translateY(0);
 }
 
-.service, .title, .dark {
+.service,
+.title,
+.dark {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
@@ -96,7 +140,7 @@
 
 .m div {
     border: 1px solid ghostwhite;
-    
+
     padding: 5px;
     border-radius: 12px;
     margin-top: 10px;
@@ -5919,35 +5963,68 @@ hr {
     padding-left: 15px;
     padding-right: 15px
 }
+
 @media (min-width: 1024px) {
     .zayafka {
         display: none;
     }
 
     .pomoshnik button {
-        width: 90px !important; 
+        width: 90px !important;
         height: 90px !important;
         bottom: 15px !important;
     }
-    
+
     .pomoshnik button img {
         width: 50px !important;
         height: 50px !important;
     }
-    
+
 }
 
 @media (max-width: 768px) {
     #contacts {
         display: none;
     }
-   
+
 }
 
 @media (min-width: 768px) {
     .container {
         width: 750px
     }
+
+    .header {
+        padding-top: 30px;
+    }
+
+.modal-content .inputs {
+    padding: 0 30px 0 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.modal-content .p2 {
+    font-size: 17px;
+}
+
+.modal-content .btn_otpravit {
+    width: 100%;
+    margin-top: 30px;
+    padding: 12px 8px;
+    border: none;
+    border-radius: 15px;
+    background-color: #3d3bff;
+}
+
+
+.modal-content .inputs input {
+    padding: 15px 8px;
+    border-radius: 15px;
+    border: 0.5px solid gainsboro;
+}
+
 }
 
 @media (min-width: 992px) {
@@ -7476,7 +7553,7 @@ select[multiple].input-lg {
 }
 
 
-#geography{
+#geography {
     margin-top: 50px;
 }
 
@@ -7587,9 +7664,9 @@ hr {
 }
 
 @media (min-width: 1024px) {
-#h1_head {
-    font-size: 50px !important;
-}
+    #h1_head {
+        font-size: 50px !important;
+    }
 }
 
 @media (min-width: 768px) {
@@ -7871,7 +7948,7 @@ tbody.collapse.in {
 .nav {
     margin-bottom: 0;
     padding-left: 0;
-    list-style: none
+    list-style: none;
 }
 
 .nav>li {
