--- a/SAM_SOFT_LINE/css/style.css
+++ b/SAM_SOFT_LINE/css/style.css
@@ -6000,29 +6000,7 @@ hr {
 
 .modal-content .inputs {
     padding: 0 30px 0 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
 
-.modal-content .p2 {
-    font-size: 17px;
-}
-
-.modal-content .btn_otpravit {
-    width: 100%;
-    margin-top: 30px;
-    padding: 12px 8px;
-    border: none;
-    border-radius: 15px;
-    background-color: #3d3bff;
-}
-
-
-.modal-content .inputs input {
-    padding: 15px 8px;
-    border-radius: 15px;
-    border: 0.5px solid gainsboro;
 }
 
 }
@@ -7868,6 +7846,20 @@ hr {
         padding-top: 6px;
         font-size: 12px;
     }
+
+    
+    .header {
+        padding-top: 30px;
+    }
+
+.modal-content .inputs {
+    padding: 0 30px 0 30px;
+
+}
+    
+.login-box2 .p2 {
+    font-size: 12px;
+}
 
     #toggleButton {
         width: 50px;
