--- a/SAM_SOFT_LINE/css/style.css
+++ b/SAM_SOFT_LINE/css/style.css
@@ -7764,6 +7764,11 @@ hr {
         font-size: 12px
     }
 
+    
+    .btn_otpravit {
+        width: 200px !important;
+    }
+
     .login-box2 .p2 {
         font-size:15px !important; 
     }
