--- a/SAM_SOFT_LINE/css/style.css
+++ b/SAM_SOFT_LINE/css/style.css
@@ -7856,6 +7856,9 @@ hr {
         font-size: 12px;
     }
 
+    .modal-content {
+        height: 400px !important;
+    }
     
     .btn_otpravit {
         width: 200px !important;
