--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+.nav-item a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .nav-links {
     display: flex;
     list-style: none;
