--- a/css/style.css
+++ b/css/style.css
@@ -7737,11 +7737,11 @@ select[multiple].input-lg {
 }
 
 
-.zayafka {
+/* .zayafka {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.717);
+
     z-index: 1000;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -7749,23 +7749,23 @@ select[multiple].input-lg {
     text-align: center;
     justify-content: center;
     border-radius: 10px;
-}
+} */
 
-.zayafka .zayafka2 {
+
+ .btn_ostavit {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+
+    z-index: 1000;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-left: 15px;
     border-radius: 10px;
-    padding: 5px 100px;
-}
 
-.zayafka .skidka {
-    background-color: yellow;
-    padding: 5px 5px;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
 
-}
-
-.zayafka .btn_ostavit {
     width: 90%;
     margin-bottom: 5px;
     background-color: #3d3bff;
