--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,9 @@ html {
 
 @media (max-width: 768px) {
     .menu {
-        height: 90px;   
+        height: 90px;
     }
+
     .nav-links {
         display: none;
         flex-direction: column;
@@ -53,9 +54,9 @@ html {
         left: 0;
         padding-left: 20px;
         height: 1000% !important;
-      background: rgba(0, 0, 0, 0.811) !important;
+        background: rgba(0, 0, 0, 0.811) !important;
         width: 150px;
-        box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     }
 
     .burger-menu {
@@ -64,10 +65,10 @@ html {
         margin-left: 150px;
     }
 
-    .burger-menu.active + .nav-links {
+    .burger-menu.active+.nav-links {
         display: flex;
         padding-top: 30px;
-       
+
     }
 
     .nav-links li {
@@ -77,8 +78,10 @@ html {
 
 @media (max-width: 320px) {
     .menu {
-        height: 90px;   
+        height: 90px;
     }
+
+   
 
 
 
@@ -88,9 +91,10 @@ html {
         margin-left: 100px;
     }
 
-    .burger-menu.active + .nav-links {
+    .burger-menu.active+.nav-links {
         display: flex;
-        justify-content: space-between;;
+        justify-content: space-between;
+        ;
     }
 
     .nav-links li {
@@ -125,7 +129,7 @@ html {
 
 .burger-menu span {
     height: 3px;
-    background: #fff; 
+    background: #fff;
     margin: 4px 0;
     width: 100%;
     transition: all 0.3s ease;
@@ -139,7 +143,8 @@ html {
 }
 
 .burger-menu.active span:nth-child(2) {
-    opacity: 0; /* Hide the middle line */
+    opacity: 0;
+    /* Hide the middle line */
 }
 
 .burger-menu.active span:nth-child(3) {
@@ -160,11 +165,11 @@ html {
         height: 600px;
         background: rgba(79, 79, 79, 0.811);
         width: 150px;
-        box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         opacity: 0;
-        transform: translateY(10px); 
-        transition: opacity 0.3s ease, transform 0.3s ease; 
-        visibility: hidden; 
+        transform: translateY(10px);
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        visibility: hidden;
         z-index: 1000;
     }
 
@@ -173,10 +178,10 @@ html {
         margin-left: 150px;
     }
 
-    .burger-menu.active + .nav-links {
+    .burger-menu.active+.nav-links {
         opacity: 1;
         transform: translateY(0);
-        visibility: visible; 
+        visibility: visible;
     }
 
     .nav-links li {
@@ -194,11 +199,11 @@ html {
         padding-left: 20px;
         background: rgba(0, 0, 0, 0.811);
         width: 150px;
-        box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         opacity: 0;
-        transform: translateY(-40px); 
-        transition: opacity 0.3s ease, transform 0.3s ease; 
-        visibility: hidden; 
+        transform: translateY(-40px);
+        transition: opacity 0.3s ease, transform 0.3s ease;
+        visibility: hidden;
         z-index: 1000;
     }
 
@@ -217,6 +222,7 @@ html {
     width: 60px;
 
 }
+
 .nav-item a:hover {
     color: #007bff;
 }
@@ -264,7 +270,7 @@ html {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-    
+
 }
 
 .service.visible {
@@ -324,7 +330,7 @@ html {
 .m div a {
     display: flex;
     gap: 20px;
-    
+
 }
 
 .m .p2 {
@@ -6174,10 +6180,10 @@ hr {
         padding-top: 30px;
     }
 
-.modal-content .inputs {
-    padding: 0 30px 0 30px;
+    .modal-content .inputs {
+        padding: 0 30px 0 30px;
 
-}
+    }
 
 }
 
@@ -6313,6 +6319,21 @@ hr {
     margin-left: 10px !important;
     animation: slideIn 3s forwards;
 }
+@media (max-width: 768px) {
+    #h1_head {
+        font-size: 40px;
+    }
+}
+
+      @media (max-width: 425px) {
+                    #h1_head {
+                        font-size: 30px;
+                    }
+                }
+
+                .logo_div {
+            display: inline-block;
+        }
 
 @keyframes slideIn {
     from {
@@ -7713,7 +7734,7 @@ select[multiple].input-lg {
 
 
 
- .btn_ostavit {
+.btn_ostavit {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -7909,12 +7930,7 @@ hr {
     }
 }
 
-@media (max-width: 425px) {
-    #h1_head {
-        font-size: 28px !important;
-    }
 
-}
 @media (min-width: 425px) {
     .form-horizontal .form-group-sm .control-label {
         padding-top: 6px;
@@ -7923,13 +7939,13 @@ hr {
 
 
 
-    
+
     .btn_otpravit {
         width: 200px !important;
     }
 
     .login-box2 .p2 {
-        font-size:15px !important; 
+        font-size: 15px !important;
     }
 
 
@@ -7961,7 +7977,6 @@ hr {
 }
 
 
-
 @media (min-width: 375px) {
     .form-horizontal .form-group-sm .control-label {
         padding-top: 6px;
@@ -7970,7 +7985,7 @@ hr {
 
 
 
-    
+
 
     #toggleButton {
         width: 50px;
@@ -8009,7 +8024,7 @@ hr {
 
 @media (min-width: 320px) {
 
-     
+
 
     .form-horizontal .form-group-sm .control-label {
         padding-top: 6px;
@@ -8024,23 +8039,23 @@ hr {
     .modal-content {
         height: 400px !important;
     }
-    
+
     .btn_otpravit {
         width: 200px !important;
     }
-    
+
     .header {
         padding-top: 30px;
     }
 
-.modal-content .inputs {
-    padding: 0 30px 0 30px;
+    .modal-content .inputs {
+        padding: 0 30px 0 30px;
 
-}
-    
-.login-box2 .p2 {
-    font-size: 12px;
-}
+    }
+
+    .login-box2 .p2 {
+        font-size: 12px;
+    }
 
     #toggleButton {
         width: 50px;
@@ -8223,31 +8238,11 @@ tbody.collapse.in {
 
 
 #logo_header {
-    display: none; 
+    display: none;
 }
 
 
-@media (max-width: 425px) {
-    #h1_head {
-        font-size: 28px !important;
-    }
 
-}
-
-@media (max-width: 768px) {
-
-    #h1_head {
-        font-size: 35px !important;
-    }
-}
-
-
-@media (max-width: 1024px) {
-
-    #h1_head {
-        font-size: 45px !important;
-    }
-}
 
 
 @media (min-width: 768px) {
@@ -8266,11 +8261,11 @@ tbody.collapse.in {
     }
 
     #logo_header {
-        display: block; 
+        display: block;
     }
-    
+
     .login-box2 .p2 {
-        font-size:20px !important; 
+        font-size: 20px !important;
     }
 
     .btn_otpravit {
@@ -10150,7 +10145,7 @@ h2.dark+p {
     bottom: 0;
     background: url(https://images.unsplash.com/photo-1487017159836-4e23ece2e4cf?q=80&w=2671&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) no-repeat center center;
     background-size: cover;
-    filter: blur(9px); 
+    filter: blur(9px);
     z-index: 0;
 }
 
