--- a/css/style.css
+++ b/css/style.css
@@ -6321,7 +6321,13 @@ hr {
 }
 @media (max-width: 768px) {
     #h1_head {
-        font-size: 40px;
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 1024px) {
+    #h1_head {
+        font-size: 50px;
     }
 }
 
